--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "contentful": "^7.0.5",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-inlinesvg": "^0.8.2",
     "react-intl": "^2.7.2",
     "react-scripts": "2.0.5",
     "styled-components": "^4.0.2"
