--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react-dom": "^16.6.0",
     "react-inlinesvg": "^0.8.2",
     "react-intl": "^2.7.2",
+    "react-pose": "^3.4.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-scroll": "^1.7.10",
     "styled-components": "^4.0.2"
   },
   "scripts": {
